fixed layout issue

--- a/interactive-movie-app/src/app/components/movie/movie-item/movie-item.component.scss
+++ b/interactive-movie-app/src/app/components/movie/movie-item/movie-item.component.scss
@@ -21,6 +21,8 @@
 
   .item-container {
     grid-area: content;
+    width: auto;
+    height: auto;
     background-color: rgba(46, 53, 50, 0.8);
 
     transition: opacity 0.5s ease-in-out;
